<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- Parent -->
  <parent>
    <groupId>org.jboss</groupId>
    <artifactId>jboss-parent</artifactId>
    <version>42</version>
    <relativePath />
  </parent>

  <!-- Model Version -->
  <modelVersion>4.0.0</modelVersion>

  <!-- Artifact Configuration -->
  <groupId>org.jboss.arquillian.extension</groupId>
  <artifactId>arquillian-drone-aggregator</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Arquillian Drone Extension Agreggator</name>
  <description>Extension for functional testing based on web view layer (Ajocado, Selenium, WebDriver)</description>

  <developers>
    <developer>
      <name>Karel Piwko</name>
      <email>kpiwko@redhat.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://git@github.com:arquillian/arquillian-extension-drone.git</connection>
    <developerConnection>scm:git:ssh://github.com/arquillian/arquillian-extension-drone.git</developerConnection>
    <url>git://github.com/arquillian/arquillian-extension-drone.git</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <!-- Versioning -->
    <version.arquillian.core>1.8.0.Final</version.arquillian.core>
    <version.selenium>4.19.0</version.selenium>
    <version.htmlunit.driver>4.17.0</version.htmlunit.driver>
    <version.appium.java.client>8.6.0</version.appium.java.client>

    <!-- Test bits versions -->
    <version.junit>4.13.2</version.junit>
    <version.assertj>3.25.0</version.assertj>
    <version.mockito>5.8.0</version.mockito>
    <version.system.rules>1.19.0</version.system.rules>
    <version.hoverfly.java>0.15.0</version.hoverfly.java>
    <version.awaitility>4.2.0</version.awaitility>
    <version.arquillian.spacelift>1.0.2</version.arquillian.spacelift>

    <!-- To avoid collisions with Jetty version we are using the same as packaged in Selenium Server -->
    <version.org.eclipse.jetty>9.4.53.v20231009</version.org.eclipse.jetty>
    <version.arquillian.jetty>2.0.0.Final</version.arquillian.jetty>

    <!-- override from parent -->
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>

    <maven.compiler.argument.target>1.8</maven.compiler.argument.target>
    <maven.compiler.argument.source>1.8</maven.compiler.argument.source>
    <version.surefire.plugin>3.2.5</version.surefire.plugin>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <pushChanges>false</pushChanges>
          <localCheckout>true</localCheckout>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>animal-sniffer-maven-plugin</artifactId>
        <version>1.23</version>
        <executions>
          <execution>
            <id>signature-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <signature>
            <groupId>org.codehaus.mojo.signature</groupId>
            <artifactId>java18</artifactId>
            <version>1.0</version>
          </signature>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.3.2</version>
      </plugin>
    </plugins>
  </reporting>

  <!-- Modules -->
  <modules>

    <!-- Drone build chain -->
    <module>build-config</module>
    <module>drone-bom</module>
    <module>drone-build</module>

    <!-- Drone dependency chain -->
    <module>depchain</module>

    <!-- Drone modules -->
    <module>drone-api</module>
    <module>drone-spi</module>
    <module>drone-configuration</module>
    <module>drone-impl</module>
    <module>drone-webdriver</module>

    <!-- Drone extensions -->
    <module>extension/arquillian-drone-saucelabs-extension</module>
    <module>extension/arquillian-drone-browserstack-extension</module>
    <module>extension/arquillian-drone-appium-extension</module>
  </modules>

</project>
